--- a/ext-files/manifest.json
+++ b/ext-files/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Wykop bad news filter",
+    "name": "Wykop news filter",
     "version": "0.0.1",
     "author": "RepoGamesStudio",
     "description": "Filter bad news",
