--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wykop-bad-news-filter",
+  "name": "wykop-news-filter",
   "version": "0.0.1",
   "description": "",
   "main": "src/main.js",
